test_scripts/errors/multiline_nested_fn_error.shm
fn outer() {
    fn inner() {
        undefined_var;
    }
    inner();
}
outer();
